# ds18b20

./: Cargo.toml  README.md
src/: error.rs  lib.rs  resolution.rs
