[package]
name = "ds18b20"
version = "0.2.0"
authors = ["Bart Weber", "Nathan Fox <fuchsnj@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/fuchsnj/ds18b20"
keywords = ["onewire", "embedded-hal-driver", "ds18b20", "temperature", "sensor"]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust driver for the DS18B20 temperature sensor using the [one-wire-hal](https://github.com/bartweber/one-wire-hal) crate.
"""

[dependencies]
one-wire-hal = { path = "../one-wire-hal" }
embedded-hal = { version = "1.0.0" }